--- a/index.html
+++ b/index.html
@@ -92,8 +92,40 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
+      function useLocalStorageState(
+        key,
+        defaultValue = "",
+        { serialize = JSON.stringify, deserialize = JSON.parse } = {}
+      ) {
+        const [state, setState] = React.useState(() => {
+          const valueInLocalStorage = window.localStorage.getItem(key);
+          if (valueInLocalStorage) {
+            return deserialize(valueInLocalStorage);
+          }
+          return typeof defaultValue === "function"
+            ? defaultValue()
+            : defaultValue;
+        });
+
+        const prevKeyRef = React.useRef(key);
+
+        React.useEffect(() => {
+          const prevKey = prevKeyRef.current;
+          if (prevKey !== key) {
+            window.localStorage.removeItem(prevKey);
+          }
+          prevKeyRef.current = key;
+          window.localStorage.setItem(key, serialize(state));
+        }, [key, state, serialize]);
+
+        return [state, setState];
+      }
+
       function Board() {
-        const [squares, setSquares] = React.useState(Array(9).fill(null));
+        const [squares, setSquares] = useLocalStorageState(
+          "squares",
+          Array(9).fill(null)
+        );
 
         const nextValue = calculateNextValue(squares);
         const winner = calculateWinner(squares);
