--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         }
         return null;
       }
-
+      // todo history
       ReactDOM.render(<Board />, document.getElementById("root"));
     </script>
   </body>
